--- a/src/ptc_agent/agent/prompts/templates/system.md.j2
+++ b/src/ptc_agent/agent/prompts/templates/system.md.j2
@@ -1,4 +1,6 @@
-For context, today's date is {{ date }}.
+<time_awareness>
+{% include 'components/time_awareness.md.j2' %}
+</time_awareness>
 {% if user_profile %}
 
 <user_profile>
